# sesh

./: .gitignore  .jenkins-archive.sh  .jenkins-dist.sh  .jenkins-distcheck.sh  .jenkins-doxygen.sh  .jenkins-log.sh  .jenkins-valgrind.sh  .jenkins.sh  .travis.sh  .travis.yml  LICENSE  Makefile.am  README  configure.ac
src/: Makefile.am  buildconfig.h  catch_main.cc  checkheaderinclude.sh  checkincludebuildconfig.sh  checklinelength.sh  common.hh  helpermacros.h  main.cc
src/async/: Delay.hh  DelayHolder.hh  DelayHolderTest.cc  DelayTest.cc  Future.hh  Future.tcc  FutureTest.cc  Promise.hh  PromiseTest.cc  Result.hh  ResultTest.cc  SharedFuture.hh  SharedFuture.tcc  SharedFutureTest.cc  continuation.hh  continuation_test.cc  delay.hh  delay_holder.hh  delay_holder_test.cc  delay_test.cc  future.hh  future.tcc  future_test.cc  future_test_helper.hh  lazy.hh  lazy_test.cc  promise.hh  promise_test.cc  shared_future.hh  shared_future.tcc  shared_future_test.cc  shared_lazy.hh  shared_lazy_test.cc
src/common/: Char.hh  CommonResult.hh  ContainerHelper.hh  ContainerHelperTest.cc  Copy.hh  DirectInitialize.hh  Empty.hh  EnumIterator.hh  EnumIteratorTest.cc  EnumSet.hh  EnumSetTest.cc  EnumTraits.hh  ErrnoHelper.hh  ErrorLevel.hh  FunctionalInitialize.hh  Identity.hh  IntegerSequence.hh  Maybe.hh  MaybeTest.cc  Message.cc  Message.hh  MessageTest.cc  Nop.hh  OutputStream.hh  Reference.hh  ReferenceTest.cc  SharedFunction.hh  SharedFunctionTest.cc  StaticCast.hh  String.hh  StringStream.hh  Trie.hh  TrieTest.cc  Try.hh  TryTest.cc  TypeTag.hh  TypeTagTest.cc  TypeTagTestHelper.hh  Variant.hh  VariantTest.cc  (+53 more)
src/environment/: world.hh
src/i18n/: M.h
src/language/: AndOrList.cc  AndOrList.hh  AndOrListTest.cc  Assignment.cc  Assignment.hh  AssignmentTest.cc  Command.hh  CommandTest.cc  ConditionalPipeline.cc  ConditionalPipeline.hh  ConditionalPipelineTest.cc  Pipeline.cc  Pipeline.hh  PipelineTest.cc  Printable.hh  Printer.cc  Printer.hh  PrinterTest.cc  PrinterTestHelper.hh  RawString.cc  RawString.hh  RawStringTest.cc  Sequence.cc  Sequence.hh  SequenceTest.cc  SimpleCommand.cc  SimpleCommand.hh  SimpleCommandTest.cc  SourceLocation.cc  SourceLocation.hh  SourceLocationTest.cc  SourceLocationTestHelper.hh  Word.cc  Word.hh  WordComponent.hh  WordTest.cc
src/language/executing/: expansion.hh  expansion_result.hh  field.hh  multiple_field_result.hh  raw_string.cc  raw_string.hh  raw_string_test.cc  result.hh  result_test_helper.hh  string.cc  string.hh  word.cc  word.hh  word_char.hh  word_component.cc  word_component.hh  word_test.cc
src/language/parser/: AndOrListParser.cc  AndOrListParser.hh  AndOrListParserTest.cc  AssignedWordParser.cc  AssignedWordParser.hh  AssignedWordParserTest.cc  AssignmentParser.cc  AssignmentParser.hh  AssignmentParserBase.cc  AssignmentParserBase.hh  AssignmentParserBaseTest.cc  AssignmentParserImpl.cc  AssignmentParserImpl.hh  AssignmentParserImpl.tcc  AssignmentParserImplTest.cc  AssignmentParserResult.hh  AssignmentParserTest.cc  AssignmentParserTestHelper.hh  BasicEnvironment.cc  BasicEnvironment.hh  BasicEnvironmentTest.cc  BasicEnvironmentTestHelper.hh  BlankAndCommentParser.cc  BlankAndCommentParser.hh  BlankAndCommentParserTest.cc  BlankCommentNewlineParser.cc  BlankCommentNewlineParser.hh  BlankCommentNewlineParserTest.cc  CharFilter.cc  CharFilter.hh  CharFilterTest.cc  CharParser.cc  CharParser.hh  CharParserTest.cc  CharPredicates.cc  CharPredicates.hh  CommandParser.cc  CommandParser.hh  CommandParserBase.cc  CommandParserBase.hh  (+124 more)
src/language/parsing/: and_or_list.cc  and_or_list.hh  and_or_list_test.cc  blackhole.hh  char.cc  char.hh  char_predicate.cc  char_predicate.hh  char_test.cc  choice.hh  command.cc  command.hh  command_test.cc  comment.cc  comment.hh  comment_test.cc  constant_parser.hh  eof.cc  eof.hh  eof_test.cc  joiner.hh  line_continuation.cc  line_continuation.hh  line_continuation_test.cc  line_continued_char.cc  line_continued_char.hh  line_continued_char_test.cc  mapper.hh  option.hh  parser.hh  parser_test_helper.hh  pipeline.cc  pipeline.hh  pipeline_test.cc  raw_string.cc  raw_string.hh  raw_string_test.cc  repeat.hh  repeat_test.cc  report_helper.hh  (+18 more)
src/language/printing/: and_or_list.cc  and_or_list.hh  and_or_list_test.cc  buffer.cc  buffer.hh  buffer_test.cc  command.cc  command.hh  conditional_pipeline.cc  conditional_pipeline.hh  conditional_pipeline_test.cc  pipeline.cc  pipeline.hh  pipeline_test.cc  raw_string.hh  raw_string_test.cc  sequence.cc  sequence.hh  sequence_test.cc  simple_command.cc  simple_command.hh  simple_command_test.cc  word.cc  word.hh  word_component.cc  word_component.hh  word_test.cc
src/language/source/: Buffer.cc  Buffer.hh  BufferTest.cc  DiagnosticMessage.cc  DiagnosticMessage.hh  DiagnosticMessageTestHelper.hh  LineAppendedSource.cc  LineAppendedSource.hh  LineAppendedSourceTest.cc  LineContinuedSource.cc  LineContinuedSource.hh  LineContinuedSourceTest.cc  LineLocation.cc  LineLocation.hh  LineLocationTest.cc  LineLocationTestHelper.hh  Location.cc  Location.hh  LocationTest.cc  LocationTestHelper.hh  Origin.hh  OriginTestHelper.hh  Source.cc  Source.hh  SourceBuffer.cc  SourceBuffer.hh  SourceBufferTest.cc  SourceLineLocation.cc  SourceLineLocation.hh  SourceLineLocationTest.cc  SourceLineLocationTestHelper.hh  SourceLocation.cc  SourceLocation.hh  SourceLocationTest.cc  SourceLocationTestHelper.hh  SourceTest.cc  SourceTestHelper.hh  buffer.cc  buffer.hh  buffer_test.cc  (+26 more)
src/os/: Api.cc  Api.hh  ApiImpl.cc  RealApi.cc  RealApi.hh  TimeApi.hh  TimeApiTestHelper.hh  api.c  api.cc  api.h  api.hh  capi.c  capi.h  capitypes.h  time_api.hh  time_api_test_helper.hh
src/parser/: LineAppendedSource.cc  LineAppendedSource.hh  LineAppendedSourceTest.cc  LineContinuedSource.cc  LineContinuedSource.hh  LineContinuedSourceTest.cc  Source.cc  Source.hh  SourceLineLocation.cc  SourceLineLocation.hh  SourceLineLocationTest.cc  SourceLineLocationTestHelper.hh  SourceLocation.cc  SourceLocation.hh  SourceLocationTest.cc  SourceLocationTestHelper.hh  SourceTest.cc  SourceTestHelper.hh
(+205 files in other folders)
